updating experience section

--- a/index.html
+++ b/index.html
@@ -695,12 +695,58 @@
 
 
 
-  <!-- experience section starts --> 
-<section class="experience" id="experience">
+  <section class="experience" id="experience">
 
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
 
   <div class="timeline">
+
+    <!-- OCP Maintenance Solutions -->
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>OCP Maintenance Solutions</h2>
+        </div>
+        <div class="desc">
+          <h3>DevSecOps Intern</h3>
+          <p>July 2025 – September 2025 — Rabat</p>
+          <p>
+            Automated vulnerability scanning using Python and OWASP ZAP. Built secure Docker Compose environments and
+            delivered security monitoring dashboards (SSE). Contributed to code quality through CI pipelines with
+            static analysis and unit tests, enforcing best practices and documentation.
+          </p>
+          <ul>
+            <li>Security scanning: OWASP ZAP automation (Python), reporting and triage.</li>
+            <li>DevOps: Docker Compose environments, GitLab CI/CD, artifacts and promotions.</li>
+            <li>Quality & Testing: unit/integration tests, SonarQube gates, linting, coding standards.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Orange Digital Center -->
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>Orange Digital Center</h2>
+        </div>
+        <div class="desc">
+          <h3>DevOps & Software Development Intern</h3>
+          <p>June 2025 – August 2025 — Rabat</p>
+          <p>
+            Developed microservices for the <em>Fixify</em> project (Spring Boot: REST APIs, JWT Security) and a React
+            TypeScript frontend. Practiced DevOps (Docker, AWS), code reviews, and Agile Scrum. Strengthened quality with
+            automated testing (JUnit, Mockito, Selenium) and static analysis (SonarQube). Awarded 2<sup>nd</sup> place
+            nationally — Orange Summer Challenge.
+          </p>
+          <ul>
+            <li>Backend: Spring Boot (REST, JWT), modular microservice architecture.</li>
+            <li>Frontend: React + TypeScript, reusable components, API integration.</li>
+            <li>Quality & Testing: JUnit/Mockito, Selenium E2E, SonarQube quality gates, CI automation.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <!-- AWS Cloud Formation ALX -->
     <div class="container left">
@@ -711,7 +757,10 @@
         <div class="desc">
           <h3>AWS Cloud Computing Track</h3>
           <p>April 2025 – February 2026</p>
-          <p>Completed a professional cloud formation with ALX including AWS Cloud Practitioner and AWS Solutions Architect certifications.</p>
+          <p>
+            Completed professional cloud training including AWS Cloud Practitioner; hands-on labs covering IAM, EC2, S3,
+            networking, and foundational architecture patterns.
+          </p>
         </div>
       </div>
     </div>
@@ -724,7 +773,10 @@
         </div>
         <div class="desc">
           <h3>Forum Organizer</h3>
-          <p>Organized and contributed to the successful execution of the Dataverse tech forum, including planning, logistics, and outreach.</p>
+          <p>
+            Co-organized the Dataverse tech forum: planning, logistics, speaker outreach, and on-site coordination to
+            ensure successful sessions and community engagement.
+          </p>
         </div>
       </div>
     </div>
@@ -733,11 +785,14 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Hackathon MLOps</h2>
+          <h2>MLOps Hackathon</h2>
         </div>
         <div class="desc">
           <h3>Competition Organizer & Evaluator</h3>
-          <p>I've participated in the organization of the MLOps Hackathon, testing and evaluating participants’ machine learning solutions.</p>
+          <p>
+            Supported organization and evaluation of participants’ MLOps solutions, including testing pipelines,
+            reproducibility checks, and model deployment best practices.
+          </p>
         </div>
       </div>
     </div>
