--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
             <span>JavaScript</span>
           </div>
         </div>
+        <!-- Python -->
+         <div class="bar">
+         <div class="info">
+      <i class="fab fa-python" style="color: #4B8BBE;"></i>
+      <span>Python</span>
+    </div>
+  </div>
+
+  <!-- Flask -->
+  <div class="bar">
+    <div class="info">
+      <i class="fas fa-flask" style="color: #6fa76f;"></i>
+      <span>Flask</span>
+    </div>
+  </div>
 
         <div class="bar">
           <div class="info">
